--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -54,16 +54,16 @@
 
 
         &__image-1 {
-            background-image: url("../../assets/menu-1.jpg");
+            background-image: url("./assets/menu-1.jpg");
         }
         &__image-2 {
-            background-image: url("../../assets/menu-3.jpg");
+            background-image: url("./assets/menu-3.jpg");
         }
         &__image-3 {
-            background-image: url("../../assets/menu-4.jpg");
+            background-image: url("./assets/menu-4.jpg");
         }
         &__image-4 {
-            background-image: url("../../assets/menu-2.jpg");
+            background-image: url("./assets/menu-2.jpg");
         }
         &__description {
             position: relative;
