--- a/style.css
+++ b/style.css
@@ -248,16 +248,16 @@ i {
   border-radius: 1.5rem 1.5rem 0rem 0rem;
 }
 #homepage .menus .card__image-1 {
-  background-image: url("../../assets/menu-1.jpg");
+  background-image: url("./assets/menu-1.jpg");
 }
 #homepage .menus .card__image-2 {
-  background-image: url("../../assets/menu-3.jpg");
+  background-image: url("./assets/menu-3.jpg");
 }
 #homepage .menus .card__image-3 {
-  background-image: url("../../assets/menu-4.jpg");
+  background-image: url("./assets/menu-4.jpg");
 }
 #homepage .menus .card__image-4 {
-  background-image: url("../../assets/menu-2.jpg");
+  background-image: url("./assets/menu-2.jpg");
 }
 #homepage .menus .card__description {
   position: relative;
