--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -49,14 +49,14 @@
         font-size: 2rem;
         position: absolute;
         right: 1rem;
-        top: 40.5%;
+        top: 23rem;
         }
 
         .fas {
             font-size: 2rem;
             position: absolute;
             right: 1rem;
-            top: 40.5%;
+            top: 23rem;
             color: transparent;
             background-image: linear-gradient(0deg, rgb(147, 86, 220), rgb(255, 121, 218));
             background-clip: text;
